--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,20 @@
 cmake_minimum_required(VERSION 3.10)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
+
 project(CC3K)
 
-add_executable(CC3K main.cpp)
+find_package(SDL2 REQUIRED)
+find_package(SDL2_image REQUIRED)
+
+add_executable(CC3K 
+    main.cpp
+    player.h
+    player.cpp
+    game.h
+    game.cpp
+
+)
+
+include_directories(CC3K ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
+target_link_libraries(CC3K ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
