--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,8 @@ add_executable(CC3K
     environment.cpp
     boundingrectangle.h
     boundingrectangle.cpp
+    room.h
+    room.cpp
 )
 
 include_directories(CC3K ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
