--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,8 @@ add_executable(CC3K
     boundingrectangle.cpp
     room.h
     room.cpp
+    point.h
+    point.cpp
 )
 
 include_directories(CC3K ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
