Generation bug fixes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,8 @@ add_executable(CC3K
     room.cpp
     point.h
     point.cpp
+    corridor.h
+    corridor.cpp
 )
 
 include_directories(CC3K ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
