--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,11 +15,11 @@ add_executable(CC3K
     ${SOURCES}
 )
 
+include_directories(CC3K ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
+target_link_libraries(CC3K ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+
 add_subdirectory(entity)
 add_subdirectory(geometry)
 add_subdirectory(room)
 add_subdirectory(utils)
-
-
-include_directories(CC3K ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
-target_link_libraries(CC3K ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+add_subdirectory(graphics)
