--- a/src/entity/movement/CMakeLists.txt
+++ b/src/entity/movement/CMakeLists.txt
@@ -3,15 +3,13 @@ cmake_minimum_required(VERSION 3.0)
 
 
 # Generate a list of all the source files in your project directory and its subdirectories
-file(GLOB_RECURSE ENTITY_SOURCES "*.cpp" "*.h")
+file(GLOB_RECURSE ENTITY_MOVEMENT_SOURCES "*.cpp" "*.h")
 
 # Define the target for subproject1
-add_library(entity STATIC ${ENTITY_SOURCES})
+add_library(entity_movement STATIC ${ENTITY_MOVEMENT_SOURCES})
 
 
 
 # Include directories for subproject1
-target_include_directories(entity PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(entity_movement PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-
-add_subdirectory(movement)
